<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.immortal.debetcredit.CreateDebetCreditActivity">

    <EditText
        android:id="@+id/title_new_debet_credit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"/>

    <EditText
        android:id="@+id/summ_new_debet_credit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/summ_new_hint"/>

    <Button
        android:id="@+id/new_submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_btn_tetx"/>

</LinearLayout>
